INIT(converter)
VERSION(0.1.7)
SOURCES(tga2cry.ml converter.ml compile_info.ml)
EXTRA(README Makefile.in make_ocaml)
INCLUDES(-I /usr/local/ocaml/lib/ocaml/camlimages)
COMPFLAGS(-unsafe)
LINKFLAGS(-ccopt -static)
dnl USE_PARSER()
LIBRARIES(ci_core.cma ci_bmp.cma ci_gif.cma ci_jpeg.cma ci_png.cma ci_ppm.cma ci_tiff.cma)
dnl USE_NUMS()
